# awesome-app-cli

./: .gitignore  Cargo.toml  README.md  index.html
src/: app_cmd.rs  cmd_app.rs  config.rs  error.rs  exec.rs  main.rs  prelude.rs  run_dev.rs  run_new.rs  utils.rs
src/_tests/: tests_config.rs  tests_run_new.rs
src/config/: mod.rs  runner.rs
src/utils/: froms.rs  mod.rs  toml_try_froms.rs  toml_xtakes.rs  x_take.rs  x_toml.rs  x_utils.rs
tmpl/: Awesome.toml
