[package]
name = "awesome-app"
version = "0.1.2-SNAPSHOST"
authors = ["Jeremy Chone <jeremy.chone@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Rust CLI to create Awesome Desktop And Cloud Applications with Rust."
categories = ["gui", "web-programming", "command-line-utilities", "config"]
edition = "2021"
homepage = "https://awesomeapp.org"
repository = "https://github.com/rust-awesome-app/awesome-app"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap =  {version = "3", features = ["cargo"]}
thiserror = "1"
aho-corasick = "0.7"
regex = "1.6"
toml = "0.5"
serde = "1"
serde_derive = "1"
sysinfo = "0.26"

[dev_dependencies]
anyhow = "1"

