[package]
name = "awesome-app"
version = "0.1.5"
authors = ["Jeremy Chone <jeremy.chone@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Rust CLI to create Awesome Desktop And Cloud Applications with Rust."
categories = ["gui", "web-programming", "command-line-utilities", "config"]
edition = "2021"
homepage = "https://awesomeapp.dev"
repository = "https://github.com/awesomeapp-dev/"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap =  {version = "4", features = ["cargo"]}
thiserror = "1"
aho-corasick = "1"
regex = "1.6"
toml = "0.7"
serde = "1"
serde_derive = "1"
sysinfo = "0.29"

[dev-dependencies]
anyhow = "1"

